# llama-zen-turbo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  docker-compose.yaml
.claude/: CLAUDE.md  CPP_STYLE.md  TEST_OUTPUT_STYLE.md
.claude/includes/: BASH_OUTPUT_STYLE.md  COMMENT_STYLE.md  DOCUMENTATION_STYLE.md  PYTHON_STYLE.md
benchmark/: __init__.py  constants.py  core.py
benchmark/collectors/: __init__.py  cpuinfo.py  hugepages.py  perf.py  vmstat.py
docker/: Dockerfile.zen5  entrypoint.zen5.sh  requirements-cpu.txt
docs/: ZEN5_OPTIMIZER_ROADMAP.md  test.md
scripts/: benchmark_cpu.py  build.sh
src/: config.h  cpu_validator.cpp  cpu_validator.h  zen5_optimizer.cpp
src/memory/: hugepage_wrapper.cpp
tests/: CMakeLists.txt  README.md  run_tests.sh  test_cpu.cpp  test_hugepage.cpp  test_load.cpp
tests/functional/: test_fallback.cpp  test_memory_boundaries.cpp  test_memory_tracking.cpp  test_munmap.cpp  test_performance.cpp  test_stress.cpp
tests/include/: test_colors.h
tests/integration/: test_integration.sh
tests/unit/: test_cpu.cpp  test_hugepage.cpp  test_load.cpp
